feat(ticket): add ticket data types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.31"
 phonenumber = "0.3.3"
+uuid = { version = "1.4.1", features = ["v4"] }
