--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 chrono = "0.4.31"
+futures-util = "0.3.28"
 phonenumber = "0.3.3"
+serde = { version = "1.0.188", features = ["derive"] }
+surrealdb = "1.0.0"
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+toml = "0.8.2"
 uuid = { version = "1.4.1", features = ["v4"] }
