feat(inventory): major implementation of data models, some work on inventory extension system

--- a/extensions/iphone_all.toml
+++ b/extensions/iphone_all.toml
@@ -1,4 +1,7 @@
-extension_name = 'iphone_all'
+extension_id = 'iphone_all'
+extension_common_name = 'iPhones'
+extension_version = '0.1.0'
+load_override = true
 
 [[manufacturers]]
 id = 'apple'
@@ -7,14 +10,14 @@ common_name = 'Apple'
 [[devices]]
 true_name = '1'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone'
 primary_model_identifiers = ['A1203', 'MA501', 'MA712', 'MB384']
 extended_model_identifiers = ['M68AP']
 [[devices]]
 true_name = '3g'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 3G'
 primary_model_identifiers = [
     'A1241',
@@ -41,7 +44,7 @@ extended_model_identifiers = ['N82AP']
 [[devices]]
 true_name = '3gs'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 3GS'
 primary_model_identifiers = [
     'A1303',
@@ -78,7 +81,7 @@ extended_model_identifiers = ['N88AP']
 [[devices]]
 true_name = '4'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 4'
 primary_model_identifiers = [
     'A1332',
@@ -121,7 +124,7 @@ extended_model_identifiers = ['N90AP', 'N90bAP', 'N92AP']
 [[devices]]
 true_name = '4s'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 4S'
 primary_model_identifiers = [
     'A1387',
@@ -195,7 +198,7 @@ extended_model_identifiers = ['N94AP']
 [[devices]]
 true_name = '5'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 5'
 primary_model_identifiers = [
     'A1428',
@@ -260,7 +263,7 @@ extended_model_identifiers = ['N41AP', 'N42AP']
 [[devices]]
 true_name = '5c'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 5C'
 primary_model_identifiers = [
     'A1456',
@@ -340,7 +343,7 @@ extended_model_identifiers = ['N48AP', 'N49AP']
 [[devices]]
 true_name = '5s'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 5S'
 primary_model_identifiers = [
     'A1453',
@@ -422,7 +425,7 @@ extended_model_identifiers = ['N51AP', 'N53AP']
 [[devices]]
 true_name = '6'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 6'
 primary_model_identifiers = [
     'A1549',
@@ -486,7 +489,7 @@ extended_model_identifiers = ['N61AP']
 [[devices]]
 true_name = '6_plus'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 6 Plus'
 primary_model_identifiers = [
     'A1522',
@@ -535,7 +538,7 @@ extended_model_identifiers = ['N56AP']
 [[devices]]
 true_name = '6s'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 6S'
 primary_model_identifiers = [
     'A1633',
@@ -656,7 +659,7 @@ extended_model_identifiers = ['N71AP', 'N71mAP']
 [[devices]]
 true_name = '6s_plus'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 6S Plus'
 primary_model_identifiers = [
     'A1634',
@@ -754,7 +757,7 @@ extended_model_identifiers = ['N66AP', 'N66mAP']
 [[devices]]
 true_name = '7'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 7'
 primary_model_identifiers = [
     'A1660',
@@ -882,7 +885,7 @@ extended_model_identifiers = ['D10AP', 'D101AP']
 [[devices]]
 true_name = '7_plus'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 7 Plus'
 primary_model_identifiers = [
     'A1661',
@@ -1015,7 +1018,7 @@ extended_model_identifiers = ['D11AP', 'D111AP']
 [[devices]]
 true_name = '8'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 8'
 primary_model_identifiers = [
     'A1863',
@@ -1082,7 +1085,7 @@ extended_model_identifiers = ['D20AP', 'D20AAP', 'D201AP', 'D201AAP']
 [[devices]]
 true_name = '8_plus'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 8 Plus'
 primary_model_identifiers = [
     'A1864',
@@ -1148,7 +1151,7 @@ extended_model_identifiers = ['D21AP', 'D21AAP', 'D211AP', 'D211AAP']
 [[devices]]
 true_name = 'x'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone X'
 primary_model_identifiers = [
     'A1865',
@@ -1187,7 +1190,7 @@ extended_model_identifiers = ['D22AP', 'D221AP']
 [[devices]]
 true_name = 'xr'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone XR'
 primary_model_identifiers = [
     'A1984',
@@ -1325,7 +1328,7 @@ extended_model_identifiers = ['N841AP']
 [[devices]]
 true_name = 'xs'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone XS'
 primary_model_identifiers = [
     'A1920',
@@ -1409,7 +1412,7 @@ extended_model_identifiers = ['D321AP']
 [[devices]]
 true_name = 'xs_max'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone XS Max'
 primary_model_identifiers = [
     'A1921',
@@ -1499,7 +1502,7 @@ extended_model_identifiers = ['D331pAP', 'D331AP']
 [[devices]]
 true_name = '11'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 11'
 primary_model_identifiers = [
     'A2111',
@@ -1636,7 +1639,7 @@ extended_model_identifiers = ['N104AP']
 [[devices]]
 true_name = '11_pro'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 11 Pro'
 primary_model_identifiers = [
     'A2160',
@@ -1731,7 +1734,7 @@ extended_model_identifiers = ['D421AP']
 [[devices]]
 true_name = '11_pro_max'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 11 Pro Max'
 primary_model_identifiers = [
     'A2161',
@@ -1826,7 +1829,7 @@ extended_model_identifiers = ['D431AP']
 [[devices]]
 true_name = '12_mini'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 12 Mini'
 primary_model_identifiers = [
     'A2176',
@@ -1982,7 +1985,7 @@ extended_model_identifiers = ['D52gAP']
 [[devices]]
 true_name = '12'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 12'
 primary_model_identifiers = [
     'A2172',
@@ -2138,7 +2141,7 @@ extended_model_identifiers = ['D53gAP']
 [[devices]]
 true_name = '12_pro'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 12 Pro'
 primary_model_identifiers = [
     'A2341',
@@ -2246,7 +2249,7 @@ extended_model_identifiers = ['D53pAP']
 [[devices]]
 true_name = '12_pro_max'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 12 Pro Max'
 primary_model_identifiers = [
     'A2342',
@@ -2354,7 +2357,7 @@ extended_model_identifiers = ['D54pAP']
 [[devices]]
 true_name = '13_mini'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 13 Mini'
 primary_model_identifiers = [
     'A2481',
@@ -2439,7 +2442,7 @@ extended_model_identifiers = ['D16AP']
 [[devices]]
 true_name = '13'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 13'
 primary_model_identifiers = [
     'A2482',
@@ -2524,7 +2527,7 @@ extended_model_identifiers = ['D17AP']
 [[devices]]
 true_name = '13_pro'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 13 Pro'
 primary_model_identifiers = [
     'A2483',
@@ -2597,7 +2600,7 @@ extended_model_identifiers = ['D63AP']
 [[devices]]
 true_name = '13_pro_max'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 13 Pro Max'
 primary_model_identifiers = [
     'A2484',
@@ -2670,7 +2673,7 @@ extended_model_identifiers = ['D64AP']
 [[devices]]
 true_name = '14'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 14'
 primary_model_identifiers = [
     'A2649',
@@ -2743,7 +2746,7 @@ extended_model_identifiers = ['D27AP']
 [[devices]]
 true_name = '14_plus'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 14 Plus'
 primary_model_identifiers = [
     'A2632',
@@ -2816,7 +2819,7 @@ extended_model_identifiers = ['D28AP']
 [[devices]]
 true_name = '14_pro'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 14 Pro'
 primary_model_identifiers = [
     'A2650',
@@ -2893,7 +2896,7 @@ extended_model_identifiers = ['D73AP']
 [[devices]]
 true_name = '14_pro_max'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone 14 Pro Max'
 primary_model_identifiers = [
     'A2651',
@@ -2970,7 +2973,7 @@ extended_model_identifiers = ['D74AP']
 [[devices]]
 true_name = 'se1'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone SE 1'
 primary_model_identifiers = [
     'A1662',
@@ -3077,7 +3080,7 @@ extended_model_identifiers = ['N69AP', 'N69uAP']
 [[devices]]
 true_name = 'se2'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone SE 2'
 primary_model_identifiers = [
     'A2275',
@@ -3160,7 +3163,7 @@ extended_model_identifiers = ['D79AP']
 [[devices]]
 true_name = 'se3'
 manufacturer = 'apple'
-kind = 'phone'
+classification = 'phone'
 common_name = 'iPhone SE 3'
 primary_model_identifiers = [
     'A2595',
