--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.75"
 chrono = "0.4.31"
 futures-util = "0.3.28"
 phonenumber = "0.3.3"
+semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
 surrealdb = "1.0.0"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
