--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ edition = "2021"
 anyhow = "1.0.75"
 # chrono = "0.4.31"
 futures-util = "0.3.28"
+log = "0.4.20"
 # phonenumber = "0.3.3"
 semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
+simplelog = "0.12.1"
 surrealdb = "1.0.0"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 toml = "0.8.2"
-# uuid = { version = "1.4.1", features = ["v4"] }
