--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+clap = { version = "4.4.6", features = ["derive"] }
 # chrono = "0.4.31"
 futures-util = "0.3.28"
 log = "0.4.20"
 # phonenumber = "0.3.3"
 semver = "1.0.19"
-serde = { version = "1.0.188", features = ["derive"] }
+serde = { version = "1.0.188" }
 simplelog = "0.12.1"
 surrealdb = "1.0.0"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
