refactor(database, extensions): change 'classification' into 'device classification' and 'manufacturer' into 'device manufacturer'

--- a/extensions/iphone_all.toml
+++ b/extensions/iphone_all.toml
@@ -3,7 +3,7 @@ extension_common_name = 'iPhones ALL'
 extension_version = '0.1.0'
 load_override = true
 
-[[manufacturers]]
+[[device_manufacturers]]
 id = 'apple'
 common_name = 'Apple'
 
