--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.7.4"
+serde = { version = "1.0.197", features = ["derive"] }
+surrealdb = { version = "1.2.0", features = ["kv-mem"] }
+tokio = { version = "1.36.0", features = ["net", "full"] }
