--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
+http = "1.0.0"
+http-body-util = "0.1.0"
+rust_decimal = "1.34.3"
 serde = { version = "1.0.197", features = ["derive"] }
 surrealdb = { version = "1.2.0", features = ["kv-mem"] }
 tokio = { version = "1.36.0", features = ["net", "full"] }
+tower-http = { version = "0.5.2", features = ["cors"] }
