--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = "0.7.4"
 http = "1.0.0"
 http-body-util = "0.1.0"
+rand = "0.8.5"
 rust_decimal = "1.34.3"
 serde = { version = "1.0.197", features = ["derive"] }
 surrealdb = { version = "1.2.0", features = ["kv-mem"] }
