--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ axum = "0.7.4"
 http = "1.0.0"
 http-body-util = "0.1.0"
 rand = "0.8.5"
-rust_decimal = "1.34.3"
+rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
-surrealdb = { version = "1.2.0", features = ["kv-mem"] }
-tokio = { version = "1.36.0", features = ["net", "full"] }
+tokio = { version = "1.36.0", features = ["full"] }
+tokio-postgres = "0.7.10"
 tower-http = { version = "0.5.2", features = ["cors"] }
