--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-postgres = "0.7.10"
+toml = { version = "0.8.10", features = ["preserve_order"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
