--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ http-body-util = "0.1.0"
 rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-postgres = "0.7.10"
 toml = { version = "0.8.10", features = ["preserve_order"] }
