--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ axum = "0.7.4"
 fake = { version = "2.9.2", features = ["derive"] }
 http = "1.0.0"
 http-body-util = "0.1.0"
+itertools = "0.12.1"
 rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+sqlx = { version = "0.7.4", features = ["postgres", "rust_decimal", "runtime-tokio"] }
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-postgres = "0.7.10"
 toml = { version = "0.8.10", features = ["preserve_order"] }
