--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,11 @@ rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-sqlx = { version = "0.7.4", features = ["postgres", "rust_decimal", "runtime-tokio"] }
+sqlx = { version = "0.7.4", features = [
+    "postgres",
+    "rust_decimal",
+    "runtime-tokio",
+] }
 tokio = { version = "1.36.0", features = ["full"] }
 toml = { version = "0.8.10", features = ["preserve_order"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
