--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.4"
+chrono = { version = "0.4.37", features = ["serde"] }
 fake = { version = "2.9.2", features = ["derive"] }
 http = "1.0.0"
 http-body-util = "0.1.0"
@@ -15,11 +16,7 @@ rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-sqlx = { version = "0.7.4", features = [
-    "postgres",
-    "rust_decimal",
-    "runtime-tokio",
-] }
+sqlx = { version = "0.7.4", features = ["postgres", "rust_decimal", "runtime-tokio", "chrono"] }
 tokio = { version = "1.36.0", features = ["full"] }
 toml = { version = "0.8.10", features = ["preserve_order"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
