--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ itertools = "0.12.1"
 rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
+serde_json = { version = "1.0.115", features = ["preserve_order"] }
 sqlx = { version = "0.7.4", features = ["postgres", "rust_decimal", "runtime-tokio", "chrono"] }
 tokio = { version = "1.36.0", features = ["full"] }
 toml = { version = "0.8.10", features = ["preserve_order"] }
