--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.4"
+axum = { version = "0.7.4", features = ["macros"] }
 chrono = { version = "0.4.37", features = ["serde"] }
+dotenvy = "0.15.7"
 fake = { version = "2.9.2", features = ["derive"] }
 http = "1.0.0"
 http-body-util = "0.1.0"
+imei-info = "0.1.3"
 itertools = "0.12.1"
 rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.115", features = ["preserve_order"] }
-sqlx = { version = "0.7.4", features = ["postgres", "rust_decimal", "runtime-tokio", "chrono"] }
+sqlx = { version = "0.7.4", features = [
+    "postgres",
+    "rust_decimal",
+    "runtime-tokio",
+    "chrono",
+] }
 tokio = { version = "1.36.0", features = ["full"] }
 toml = { version = "0.8.10", features = ["preserve_order"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
