--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ http = "1.0.0"
 http-body-util = "0.1.0"
 imei-info = "0.1.3"
 itertools = "0.12.1"
+proc-macros = { version = "0.1.0", path = "proc-macros" }
 rand = "0.8.5"
 rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
 serde = { version = "1.0.197", features = ["derive"] }
