--- a/proc-macros/Cargo.toml
+++ b/proc-macros/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-deluxe = "0.5.0"
+deluxe = { version = "0.5.0", path = "../../deluxe" }
 proc-macro2 = "1.0.86"
 quote = "1.0.37"
 syn = "2.0.76"
