feat(api): add `ProcessEndpoint` derive macro for auto-implementing all static metadata constructors

--- a/proc-macros/Cargo.toml
+++ b/proc-macros/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+convert_case = "0.6.0"
 deluxe = { version = "0.5.0", git = "https://code.lthoerner.com/deluxe" }
 proc-macro2 = "1.0.86"
 quote = "1.0.37"
