feat(db, api): add delete endpoint handlers and table dependency declaration within derive for `DatabaseEntity`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.7.4", features = ["macros"] }
 chrono = { version = "0.4.37", features = ["serde"] }
+const_format = "0.2.33"
 dotenvy = "0.15.7"
 fake = { version = "2.9.2", features = ["derive"] }
 http = "1.0.0"
